# hashprep

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  todo.md
.github/workflows/: ci.yml
cli/: main.py
examples/reports/: train_hashprep_report.html  train_hashprep_report.json  train_hashprep_report.md  train_hashprep_report_fixes.py  train_hashprep_report_pipeline.py
frontend/: .gitignore  README.md  bun.lockb  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/ui/: fonts.ts
hashprep/: __init__.py  analyzer.py  config.py
hashprep/checks/: __init__.py  columns.py  core.py  correlations.py  datetime_checks.py  discretizer.py  distribution.py  drift.py  imbalance.py  leakage.py  missing_values.py  mutual_info.py  outliers.py  statistical_tests.py
hashprep/cli/: main.py
hashprep/core/: analyzer.py  visualizations.py
hashprep/interfaces/cli/: main.py
hashprep/preparers/: __init__.py  codegen.py  fix_registry.py  models.py  pipeline_builder.py  suggestions.py
hashprep/preparers/strategies/: __init__.py  base.py  column_ops.py  encoding.py  imputation.py  outlier.py  scaling.py  transformation.py
hashprep/reports/: __init__.py  base.py  generators.py  html.py  json.py  markdown.py  pdf.py
hashprep/summaries/: __init__.py  dataset.py  interactions.py  missing.py  mutual_info.py  variables.py
hashprep/utils/: config_loader.py  logging.py  sampling.py  type_inference.py
tests/: test.py  test_cli.py  test_codegen.py  test_config_loader.py  test_datetime.py  test_drift.py  test_edge_cases.py  test_library_api.py  test_mutual_info.py  test_pipeline.py  test_sampling.py  test_statistical_tests.py
web/: index.html  package-lock.json  package.json  svelte.config.js
web/api/: main.py
web/frontend/: index.html
web/src/: app.css  app.html
web/src/lib/: theme.svelte.ts
web/src/lib/components/: CTA.svelte  Checks.svelte  CodeExample.svelte  Features.svelte  Footer.svelte  Hero.svelte  HowItWorks.svelte  Integrations.svelte  Logo.svelte  Navbar.svelte  ThemeToggle.svelte  Themes.svelte
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/docs/: +page.svelte
