[project]
name = "hashprep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.0",
    "fastapi>=0.116.1",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
]

[project.scripts]
hashprep = "hashprep.cli.main:cli"