[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hashprep"
description = "A library for dataset quality checks, preprocessing, and report generation"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
    { name = "Aftaab Siddiqui (MaskedSyntax)", email = "aftaab@aftaab.xyz"}
]

dependencies = [
    "click>=8.3.0",
    "fuzzybunny",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "fonttools>=4.60.2",
    "tabulate>=0.9.0",
    "weasyprint>=68.0",
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "hashprep.__version__" }

[project.urls]
Homepage = "https://github.com/cachevector/hashprep"
Repository = "https://github.com/cachevector/hashprep"
Documentation = "https://github.com/cachevector/hashprep"
Issues = "https://github.com/cachevector/hashprep/issues"

[tool.setuptools.packages.find]
include = ["hashprep*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
]

[project.scripts]
hashprep = "hashprep.interfaces.cli.main:cli"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B905",   # zip without strict (requires 3.10+)
    "SIM102", # collapsible-if (elif + nested if is often more readable)
    "SIM108", # ternary operator (readability preference)
    "UP007",  # Optional[X] -> X | None (keep for 3.10 compat)
]

[tool.ruff.lint.isort]
known-first-party = ["hashprep"]
